Analyzed reresults api

--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -15,7 +15,7 @@
 }
 
 
-#select-field {
+#selectJobDescription {
   border: none;
   height: auto;
 }
@@ -33,4 +33,8 @@
 
 .Dashboard_resume-container .resumes {
   overflow: scroll;
+}
+
+.Dashboard_evaluate {
+  margin-top: 14px;
 }
