--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -38,3 +38,10 @@
 .Dashboard_evaluate {
   margin-top: 14px;
 }
+
+.Dashboard_backarrow {
+  display: flex;
+  &:hover {
+    cursor: pointer;
+  }
+}
