--- a/src/components/jobDescription/JobDescription.scss
+++ b/src/components/jobDescription/JobDescription.scss
@@ -20,10 +20,14 @@ h3 {
   width: 30vw;
 }
 
-form {
+.JobDescription_form {
   padding: 10px;
   margin: 0 auto;
   width: 80%
+}
+
+.JobDescription_h4 {
+  margin-top: 35px;
 }
 
 input[type=text], select {
